--- a/css/my-website.css
+++ b/css/my-website.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Sans+Pro&display=swap');
-/* reset css (tirar as bordas automáticas): */
+/* reset css (tirar as margens e padding automáticos): */
 * {
   color: whitesmoke;
   margin: 0;
@@ -11,7 +11,20 @@ body {
   background-image: url(../img/background.jpg);
   background-size: auto 100vh; /* tamanho da imagem: 100% da altura do visor, largura automatica */
   font-family: 'Open Sans', arial;
+  font-size: 11px;
   height: 100vh;
+}
+
+@media (min-width: 400px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 600px) {
+  body {
+    font-size: 18px;
+  }
 }
 
 header {
@@ -20,6 +33,12 @@ header {
   justify-content: center;
   align-items: center;
 } 
+
+@media (min-width: 400px) {
+  header {
+    height: 70vh;
+  }
+}
 
 .menu {
   background-color: white;
@@ -54,6 +73,10 @@ a:hover {
 .site-title,
 .site-subtitle {
   text-align: center;
+}
+
+.site-title {
+  font-size: 2.2em;
 }
 
 .img-portfolio {
