--- a/css/my-website.css
+++ b/css/my-website.css
@@ -12,7 +12,7 @@
 
 body {
   background-image: url(../img/background.jpg);
-  background-size: 100vw 100vh; /* tamanho da imagem: 100% da largura e da altura do visor */
+  background-size: auto 100vh;
   font-size: 14px;
   height: 100vh;
 }
